--- a/templates/blockwrap.twig
+++ b/templates/blockwrap.twig
@@ -1,7 +1,7 @@
-{% import "macros/chapter.twig" as chapter %}
+{% import "elements/chapter.twig" as chapter %}
 
 <section class="pb__{{name}}">
-    <div class="wrap gut--{{options.gutter}} {{options.wrap ?: 'wid--fl'}}">
+    <div class="wrap {{blocktheme.gutter}} {{blocktheme.wrap ?: 'wid--fl'}}">
         {{chapter.heading(block.heading.heading)}}
         <div class="row">
            {% block blockcontent %}
