--- a/templates/elements/visual.twig
+++ b/templates/elements/visual.twig
@@ -1,6 +1,6 @@
 {# visual #}
 {% macro image(visual, options) %}
-{# acf cloned element #}
+{# acf cloned visual element #}
 <div class="visual">
     <div class="img--wrap ratio--{{options.ratio}} mwid--{{options.size}}">
         <picture class="picture">
@@ -26,4 +26,15 @@
         </picture>
     </div>
  </div>
+ {% endmacro %}
+{# default wordpress thumbnail #}
+ {% macro thumbnail(post, options) %}
+<div class="visual">
+    <div class="img--wrap ratio--{{options.ratio}} mwid--{{options.size}}">
+    <img class="img lazyload" src="{{ post.thumbnail.src }}" data-srcset="{{ post.thumbnail.src|retina(1) }} 1x,
+        {{ post.thumbnail.src|retina(2) }} 2x,
+        {{ post.thumbnail.src|retina(3) }} 3x,
+        {{ post.thumbnail.src|retina(4) }} 4x">
+    </div>
+</div>
  {% endmacro %}
