--- a/templates/elements/card.twig
+++ b/templates/elements/card.twig
@@ -2,7 +2,7 @@
 {% import '@ponzoblocks/elements/visual.twig' as visual %}
 {% import '@ponzoblocks/elements/button.twig' as button %}
 {% import '@ponzoblocks/elements/textfields.twig' as textfields %}
-<div class="card col col-{{blocktheme.columnwidth}} pb-contentcolumn">
+<div class="card col c{{blocktheme.columnwidth}} pb-contentcolumn">
     <div class="cc__head">
         {{ visual.thumbnail(card, block.visualoptions.visualoptions) }}
     </div>
