--- a/templates/contentcolumn.twig
+++ b/templates/contentcolumn.twig
@@ -2,7 +2,7 @@
 {% import '@ponzoblocks/elements/visual.twig' as visual %}
 {% import '@ponzoblocks/elements/button.twig' as button %}
 {% import '@ponzoblocks/elements/textfields.twig' as textfields %}
-<div class="col c{{blocktheme.columnwidth}} pb-contentcolumn">
+<div class="c{{blocktheme.columnwidth}} pb-contentcolumn">
     {% if column.visual %}
     <div class="pb__visual">
          {{ visual.image(
