--- a/templates/elements/chapter.twig
+++ b/templates/elements/chapter.twig
@@ -14,7 +14,7 @@
     {% endif %}
     </h4>
     {% if heading.subtitle %}
-    <p class="pb__subchapter {{heading.subtitlefontsize}}"></p>
+    <p class="pb__subchapter {{heading.subtitlefontsize}}">{{heading.subtitle}}</p>
     {% endif %}
 </div>
 {% endif %}
