--- a/templates/contentcolumn.twig
+++ b/templates/contentcolumn.twig
@@ -7,7 +7,7 @@
     <div class="pb__visual">
          {{ visual.image(
            column.visual, 
-           column.visualoptions) 
+           block.visualoptions.visualoptions) 
         }}
         {{ blocktheme.linkvisual ? button.button(column.link, blocktheme ) }}
     </div>
