--- a/templates/elements/button.twig
+++ b/templates/elements/button.twig
@@ -1,39 +1,23 @@
 {# button #}
-{% macro button(link, blocktheme, directlink) %}
-    {# link c   hoice #}
+{% macro button(link, blocktheme, href) %}
+
     {% if link.type == 'website'%}
-    <a class="btn {{blocktheme.buttonstyle}} {{blocktheme.buttonoutline ? 'line' }} {{blocktheme.buttonsize}}" href="{{link.websitelink}}" target=""{{window}}>
-        {% if link.theme_icons %}
-        <span class="pi icon-{{link.theme_icons}}"></span>
-        {% endif %}
-        <span>{{link.buttontext}}</span>
-    </a>
+        {% set href= link.websitelink %}
     {% elseif link.type == 'email' %}
-    <a class="btn {{blocktheme.buttonstyle}} {{blocktheme.buttonoutline ? 'line' }} {{blocktheme.buttonsize}}" href="mailto:{{link.email}}" target=""{{window}}>
-        {% if link.theme_icons %}
-        <span class="pi icon-{{link.theme_icons}}"></span>
-        {% endif %}
-        <span>{{link.buttontext}}</span>
-    </a>
+        {% set href= 'mailto:' ~ link.email %}
     {% elseif link.type == 'intern' %}
-    {% set internlink = link.pagelink %}
-    {% if link.segment %}
-        {% set internlink = link.pagelink ~ link.segment %}
+        {% set href = link.pagelink %}
+        {% if link.segment %}
+            {% set href = link.pagelink ~ link.segment %}
+        {% endif %}
     {% endif %}
-    <a class="btn {{blocktheme.buttonstyle}} {{blocktheme.buttonoutline ? 'line' }} {{blocktheme.buttonsize}}" href="{{internlink}}" target=""{{window}}>
-        {% if link.theme_icons %}
-        <span class="pi icon-{{link.theme_icons}}"></span>
-        {% endif %}
-        <span>{{link.buttontext ? link.buttontext : blocktheme.buttontext }}</span>
-    </a>
-    {# direct link with additional options in blocktheme #}
-    {% elseif directlink %}
-        <a class="btn {{blocktheme.buttonstyle}} {{blocktheme.buttonoutline ? 'line' }} {{blocktheme.buttonsize}}" href="{{directlink}}" target=""{{blocktheme.window}}>
-        {% if link.theme_icons %}
-        <span class="pi icon-{{blocktheme.theme_icons}}"></span>
-        {% endif %}
-        <span>{{blocktheme.buttontext}}</span>
-    </a>
+        {% if href %}
+        <a class="btn {{blocktheme.buttonstyle}} {{blocktheme.buttonoutline ? 'line' }} {{blocktheme.buttonsize}}" href="{{href}}" target=""{{blocktheme.window}}>
+            {% if link.theme_icons %}
+            <span class="pi icon-{{link.theme_icons}}"></span>
+            {% endif %}
+            <span>{{link.buttontext ? link.buttontext : blocktheme.buttontext }}</span>
+        </a>
     {% endif %}
 {% endmacro %}
 
