--- a/templates/blockwrap.twig
+++ b/templates/blockwrap.twig
@@ -1,6 +1,9 @@
 {% import "@ponzoblocks/elements/chapter.twig" as chapter %}
 <section class="pb__{{blocktheme.name}} pb__{{blockname}} space" data-s="{{blocktheme.space}}" data-theme="{{blocktheme.colortheme}}">
     <div class="wrap {{blocktheme.gutter}} {{blocktheme.wrap ? '' : 'wid--fl'}} {{ blocktheme.visualbg  ? 'no--flow' : '' }}">
+        {% if block.link.link.anchor_id %}
+            <a name="{{block.link.link.anchor_id|sanitize}}"></a>
+        {% endif %}
         {% if block.heading.heading %}
         <div class="row">
         {{chapter.heading(block.heading.heading, blocktheme)}}
